Add font awesome to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
     </script>
-    </script>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/6a7752b7f5.js" crossorigin="anonymous"></script>
+
     {% endblock %}
 
     {% block extra_js %}
