--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 
 {% block content %}
-aaadddddddd
-{% endblock %}
+<div class="container">
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input type="submit" name="Submit">
+    </form>
+</div {% endblock %}
