--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -3,6 +3,25 @@
 
 {% block content %}
 {% for product in products %}
-{{ product }}
+<div class="card" style="width: 18rem;">
+    <div class="card-header">
+        NAME:
+    </div>
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">Description:</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Category:</li>
+        <li class="list-group-item">Price:</li>
+        <li class="list-group-item">A third item</li>
+    </ul>
+    <div class="card-body">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+    </div>
+</div>
 {% endfor %}
 {% endblock %}
