--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <!-- bootstrap5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -42,6 +43,7 @@
 </head>
 
 <body>
+    <!-- <div class="container-fluid"> -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -93,6 +95,7 @@
 
     {% block postloadjs %}
     {% endblock %}
+    <!-- </div> -->
 </body>
 
 </html>
