--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -5,22 +5,20 @@
 {% for product in products %}
 <div class="card" style="width: 18rem;">
     <div class="card-header">
-        NAME:
+        NAME: {{ product.name }}
     </div>
     <img src="..." class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title">Description:</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+        <p class="card-text">{{ product.description }}</p>
     </div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">Category:</li>
-        <li class="list-group-item">Price:</li>
-        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">Category: {{ product.category }}</li>
+        <li class="list-group-item">Price: £{{ product.price }}</li>
     </ul>
     <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+        <a href="{% url 'edit_product' product.id %}" class="card-link">Edit</a>
+        <a href="{% url 'delete_product' product.id %}" class="card-link">Delete</a>
     </div>
 </div>
 {% endfor %}
