--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container">
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
         <input type="submit" name="Submit">
