Add ability to add image when adding a product

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -7,7 +7,9 @@
     <div class="card-header">
         NAME: {{ product.name }}
     </div>
-    <img src="..." class="card-img-top" alt="...">
+    {% if product.image %}
+    <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+    {% endif %}
     <div class="card-body">
         <h5 class="card-title">Description:</h5>
         <p class="card-text">{{ product.description }}</p>
