--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -3,24 +3,32 @@
 
 {% block content %}
 {% for product in products %}
-<div class="card" style="width: 18rem;">
-    <div class="card-header">
-        NAME: {{ product.name }}
-    </div>
-    {% if product.image %}
-    <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
-    {% endif %}
-    <div class="card-body">
-        <h5 class="card-title">Description:</h5>
-        <p class="card-text">{{ product.description }}</p>
-    </div>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item">Category: {{ product.category }}</li>
-        <li class="list-group-item">Price: £{{ product.price }}</li>
-    </ul>
-    <div class="card-body">
-        <a href="{% url 'edit_product' product.id %}" class="card-link">Edit</a>
-        <a href="{% url 'delete_product' product.id %}" class="card-link">Delete</a>
+<div class="container">
+    <div class="row">
+        {% for product in products %}
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+            <div class="card h-100">
+                <div class="card-header">
+                    NAME: {{ product.name }}
+                </div>
+                {% if product.image %}
+                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                {% endif %}
+                <div class="card-body">
+                    <h5 class="card-title">Description:</h5>
+                    <p class="card-text">{{ product.description }}</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Category: {{ product.category }}</li>
+                    <li class="list-group-item">Price: £{{ product.price }}</li>
+                </ul>
+                <div class="card-body">
+                    <a href="{% url 'edit_product' product.id %}" class="card-link">Edit</a>
+                    <a href="{% url 'delete_product' product.id %}" class="card-link">Delete</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </div>
 {% endfor %}
