Add card to menu/detail template

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
                     {% endif %}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'menu-all' %}">Menu</a>
+                        <a class="nav-link" href="{% url 'menu_all' %}">Menu</a>
                     </li>
 
                 </ul>
