Update menu/detail template to show product info

--- a/menu/templates/menu/detail.html
+++ b/menu/templates/menu/detail.html
@@ -7,17 +7,27 @@
     <div class="container">
         <div class="row">
             <div class="card" style="width: 18rem;">
-                <img src="#" class="card-img-top" alt="...">
+                <div class="card-header">
+                    NAME: {{ product.name }}
+                </div>
+                {% if product.image %}
+                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                {% endif %}
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Description:</h5>
+                    <p class="card-text">{{ product.description }}</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Category: {{ product.category }}</li>
+                    <li class="list-group-item">Price: £{{ product.price }}</li>
+                </ul>
+                <div class="card-body">
+                    <a href="{% url 'edit_product' product.id %}" class="card-link">Edit</a>
+                    <a href="{% url 'delete_product' product.id %}" class="card-link">Delete</a>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
-{% endblock %}
+    {% endblock %}
