--- a/menu/templates/menu/detail.html
+++ b/menu/templates/menu/detail.html
@@ -4,16 +4,16 @@
 {% block content %}
 
 <div class="container">
-    <div class="container">
-        <div class="row">
-            <div class="card" style="width: 18rem;">
+    <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
+            <div class="card h-100">
                 <div class="card-header">
                     NAME: {{ product.name }}
                 </div>
                 {% if product.image %}
                 <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
                 {% endif %}
-                <div class="card-body">
+                <div class=" card-body">
                     <h5 class="card-title">Description:</h5>
                     <p class="card-text">{{ product.description }}</p>
                 </div>
@@ -28,6 +28,7 @@
             </div>
         </div>
     </div>
+</div>
 
 
-    {% endblock %}
+{% endblock %}
