--- a/menu/templates/menu/detail.html
+++ b/menu/templates/menu/detail.html
@@ -22,7 +22,7 @@
                     <li class="list-group-item">Price: £{{ product.price }}</li>
                 </ul>
                 <div class="card-body">
-                    <a href="{% url 'edit_product' product.id %}" class="card-link">Edit</a>
+                    <a href="{% url 'menu_all' %}" class="card-link">Back To Menu</a>
                     <a href="{% url 'delete_product' product.id %}" class="card-link">Delete</a>
                 </div>
             </div>
