Add product management to nav if user is superuser

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,10 +77,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'menu_all' %}">Menu</a>
                     </li>
+                    {% if request.user.is_authenticated %}
+                    {% if request.user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'products' %}">Product Management</a>
+                    </li>
+                    {% endif %}
+                    {% endif %}
 
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" method="GET" action="">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
