--- a/menu/templates/menu/detail.html
+++ b/menu/templates/menu/detail.html
@@ -15,7 +15,7 @@
                     <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
                 </a>
                 {% endif %}
-                <div class=" card-body">
+                <div class="card-body">
                     <h5 class="card-title">Description:</h5>
                     <p class="card-text">{{ product.description }}</p>
                 </div>
@@ -23,6 +23,32 @@
                     <li class="list-group-item">Category: {{ product.category }}</li>
                     <li class="list-group-item">Price: £{{ product.price }}</li>
                 </ul>
+                <form class="form" action="" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </div>
+                </form>
+
                 <div class="card-body">
                     <a href="{% url 'menu_all' %}" class="card-link">Back To Menu</a>
                     <a href="{% url 'delete_product' product.id %}" class="card-link">Delete</a>
