--- a/menu/templates/menu/detail.html
+++ b/menu/templates/menu/detail.html
@@ -23,6 +23,7 @@
                     <li class="list-group-item">Category: {{ product.category }}</li>
                     <li class="list-group-item">Price: £{{ product.price }}</li>
                 </ul>
+                <!-- use post method as adding info (cart) to server -->
                 <form class="form" action="" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
@@ -31,20 +32,21 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        min="1" max="15" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-12">
-                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <a href="{% url 'products' %}" class="btn">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            <input type="submit" class="btn" value="Add to Cart">
                         </div>
+                        <!-- hidden form element to redirect back to page came from (redirect_url) -->
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
