--- a/menu/templates/menu/detail.html
+++ b/menu/templates/menu/detail.html
@@ -24,7 +24,7 @@
                     <li class="list-group-item">Price: £{{ product.price }}</li>
                 </ul>
                 <!-- use post method as adding info (cart) to server -->
-                <form class="form" action="" method="POST">
+                <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
