--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -17,6 +17,7 @@
         <div class="col">
             {% if cart_items %}
             <div class="table-responsive rounded"></div>
+            {{ cart_items }}
             {% else %}
             <p class="lead mb-5">Your cart is empty.</p>
             <a href="{% url 'menu_all' %}" class="btn btn-outline-black rounded-0 btn-lg">
