Correct nav searchbar href

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                     </li>
 
                 </ul>
-                <form class="d-flex" method="GET" action="{% url 'detail' }">
+                <form class="d-flex" method="GET" action="{% url 'menu_all' %}">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
@@ -104,21 +104,21 @@
     </nav>
     {% if messages %}
     <div class=" message-contrainer">
-                    {% for message in messages %}
+        {% for message in messages %}
 
-                    {% endfor %}
-            </div>
-            {% endif %}
+        {% endfor %}
+    </div>
+    {% endif %}
 
-            {% block page_header %}
-            {% endblock %}
+    {% block page_header %}
+    {% endblock %}
 
-            {% block content %}
+    {% block content %}
 
-            {% endblock %}
+    {% endblock %}
 
-            {% block postloadjs %}
-            {% endblock %}
+    {% block postloadjs %}
+    {% endblock %}
 </body>
 
 </html>
