--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,4 +3,15 @@
 
 {% block content %}
 <h1 class="display-4 text-success">SUPER!!!</h1>
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+        <img src="..." class="rounded me-2" alt="...">
+        <strong class="me-auto">Bootstrap</strong>
+        <small>11 mins ago</small>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+        Hello, world! This is a toast message.
+    </div>
+</div>
 {% endblock %}
