--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<!-- template taken from code institute boutique ado walkthrough -->
 <div class="container mb-2">
     <div class="row">
         <div class="col">
