--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,3 +15,15 @@
     </div>
 </div>
 {% endblock %}
+
+<script>
+    const toastTrigger = document.getElementById('liveToastBtn')
+    const toastLiveExample = document.getElementById('liveToast')
+    if (toastTrigger) {
+        toastTrigger.addEventListener('click', () => {
+            const toast = new bootstrap.Toast(toastLiveExample)
+
+            toast.show()
+        })
+    }
+</script>
