--- a/menu/templates/menu/detail.html
+++ b/menu/templates/menu/detail.html
@@ -29,13 +29,31 @@
                     <div class="form-row">
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-50">
+                            <div class="form-group w-75">
                                 <div class="input-group">
+                                    <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-minus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
                                     <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="15" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-plus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
 
                         <div class="col-12">
                             <a href="{% url 'products' %}" class="btn">
