--- a/menu/templates/menu/detail.html
+++ b/menu/templates/menu/detail.html
@@ -41,7 +41,7 @@
                                         </button>
                                     </div>
                                     <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        min="1" max="15" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
                                         <button class="increment-qty btn btn-black rounded-0"
                                             data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
@@ -79,4 +79,9 @@
 </div>
 
 
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'menu/includes/quantity_input_script.html' %}
 {% endblock %}
