--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -13,7 +13,6 @@
         </div>
     </div>
 
-
     <div class="row">
         <div class="col">
             {% if cart_items %}
@@ -127,9 +126,8 @@
     // Remove item and reload on click
     $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
-        // 
         var itemId = $(this).attr('id').split('remove_')[1];
-        var url = `/cart/remove/${itemId}`;
+        var url = `/cart/remove/${itemId}/`;
         var data = {
             'csrfmiddlewaretoken': csrfToken,
         };
