Change checkout/checkout template product_detail links to detail

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -33,7 +33,7 @@
         {% for item in cart_items %}
         <div class="row">
             <div class="col-2 mb-1">
-                <a href="{% url 'product_detail' item.product.id %}">
+                <a href="{% url 'detail' item.product.id %}">
                     <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
                 </a>
             </div>
@@ -52,7 +52,7 @@
         {% for item in cart_items %}
         <div class="row">
             <div class="col-2 mb-1">
-                <a href="{% url 'product_detail' item.product.id %}">
+                <a href="{% url 'detail' item.product.id %}">
                     {% if item.product.image %}
                     <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
                     {% else %}
@@ -75,13 +75,10 @@
         <div class="row text-black text-right">
             <div class="col-7 offset-2">
                 <p class="my-0">Order Total:</p>
-                <p class="my-0">Delivery:</p>
-                <p class="my-0">Grand Total:</p>
+
             </div>
             <div class="col-3">
-                <p class="my-0">${{ total | floatformat:2 }}</p>
-                <p class="my-0">${{ delivery | floatformat:2 }}</p>
-                <p class="my-0"><strong>${{ grand_total | floatformat:2 }}</strong></p>
+                <p class="my-0">£{{ total | floatformat:2 }}</p>
             </div>
         </div>
     </div>
