--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font">Shopping Cart</h2>
+            <h2 class="logo-font">Checkout</h2>
             <hr>
         </div>
     </div>
@@ -66,7 +66,7 @@
 
     <div class="row">
         <div class="col-12 col-lg-6">
-            <p class="text-muted">PLease fill out the form below to complete your order.</p>
+            <p class="text-muted">Please fill out the form below to complete your order.</p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
