Move static/checkout dir to checkout app

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,8 @@
     </script>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/6a7752b7f5.js" crossorigin="anonymous"></script>
+    <!-- stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
 
     {% endblock %}
 
