--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -134,7 +134,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<!-- needed because can't render django template var's in externaL js files -->
+<!-- use json_script as can't render django template var's in externaL js files -->
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
 {{ client_secret|json_script:"id_client_secret" }}
 <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
