--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -78,7 +78,7 @@
                     {% endfor %}
                     <tr>
                         <td colspan="5" class="pt-5 text-right">
-                            <h6><strong>Cart Total: ${{ total|floatformat:2 }}</strong></h6>
+                            <h6><strong>Cart Total: £{{ total|floatformat:2 }}</strong></h6>
                         </td>
                     </tr>
                     <tr>
