--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -1,14 +1,26 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load crispy_forms_tags %}
 
 
 {% block content %}
-<div class="container">
-    <form action="" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" name="Submit">
-    </form>
-</div>
-{% endblock %}
+<div class="container mb-2">
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <hr>
+            <h2 class="logo-font">Product Management</h2>
+            <h5 class="text-muted">Add a product</h5>
+            <hr>
+        </div>
+    </div>
+    <div class="container">
+        <form action="{% url 'add_product' %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input type="submit" name="Submit">
+            <div class="text-right">
+                <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
+                <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+            </div>
+        </form>
+    </div>
+    {% endblock %}
