--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                     {% if request.user.is_authenticated %}
                     {% if request.user.is_superuser %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}">Product Management</a>
+                        <a class="nav-link" href="{% url 'add_product' %}">Product Management</a>
                     </li>
                     {% endif %}
                     {% endif %}
