Add delete product functionality

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -22,10 +22,12 @@
                     <li class="list-group-item">Category: {{ product.category }}</li>
                     <li class="list-group-item">Price: £{{ product.price }}</li>
                 </ul>
-                <div class="card-body">
-                    <a href="{% url 'edit_product' product.id %}" class="card-link">Edit</a>
-                    <a href="{% url 'delete_product' product.id %}" class="card-link">Delete</a>
-                </div>
+                {% if request.user.is_superuser %}
+                <small class="ml-3">
+                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                </small>
+                {% endif %}
             </div>
         </div>
         {% endfor %}
