--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -15,7 +15,14 @@
     <div class="container">
         <form action="{% url 'add_product' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form|crispy }}
+            {% csrf_token %}
+            {% for field in form %}
+            {% if field.name != 'image' %}
+            {{ field | as_crispy_field }}
+            {% else %}
+            {{ field }}
+            {% endif %}
+            {% endfor %}
             <input type="submit" name="Submit">
             <div class="text-right">
                 <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
@@ -23,4 +30,14 @@
             </div>
         </form>
     </div>
+    {% endblock %}
+
+    {% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function () {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
     {% endblock %}
