--- a/templates/base.html
+++ b/templates/base.html
@@ -103,10 +103,21 @@
             </div>
         </div>
     </nav>
-    {% if messages %}
-    <div class=" message-contrainer">
-        {% for message in messages %}
 
+    {% if messages %}
+    <div class="message-container">
+        {% for message in messages %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast_warning.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast_info.html' %}
+        {% endif %}
+        {% endwith %}
         {% endfor %}
     </div>
     {% endif %}
@@ -119,6 +130,18 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script type="text/javascript">
+        let toastElList = [].slice.call(document.querySelectorAll('.toast'))
+        let toastList = toastElList.map(function (toastEl) {
+            let option = {
+                animation: true,
+                autohide: true,
+                delay: 5000,
+            }
+            let bsToast = new bootstrap.Toast(toastEl, option)
+            bsToast.show();
+        })
+    </script>
     {% endblock %}
 </body>
 
