--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -10,4 +10,35 @@
     <div class="toast-body bg-white">
         {{ message }}
     </div>
+    {% if total %}
+    <p class="logo-font bg-white text-black py-1">Your Cart ({{ product_count }})</p>
+    <div class="cart-notification-wrapper">
+        {% for item in cart_items %}
+        <div class="row">
+            <div class="col-3 my-1">
+                <img class="w-100" src="{{ item.product.image.url }}">
+            </div>
+            <div class="col-9">
+                <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    <div class="row">
+        <div class="col">
+            <strong>
+                <p class="mt-3 mb-1 text-black">
+                    Total: <span class="float-right">${{ total|floatformat:2 }}</span>
+                </p>
+            </strong>
+            <a href="{% url 'view_cart' %}" class="btn btn-black btn-block rounded-0">
+                <span class="text-uppercase">Go To Secure Checkout</span>
+                <span class="icon">
+                    <i class="fas fa-lock"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+    {% endif %}
 </div>
