--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -11,6 +11,7 @@
                 <div class="card-header">
                     NAME: {{ product.name }}
                 </div>
+                <!-- remove as want all to have images -->
                 {% if product.image %}
                 <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
                 {% endif %}
@@ -22,6 +23,57 @@
                     <li class="list-group-item">Category: {{ product.category }}</li>
                     <li class="list-group-item">Price: £{{ product.price }}</li>
                 </ul>
+                <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-75">
+                                <div class="input-group">
+                                    <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-minus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                        min="1" max="15" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-plus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12">
+                            {% if cart %}
+                            <a href="{% url 'checkout' %}" class="btn">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Checkout</span>
+                            </a>
+                            {% endif %}
+                            <input type="submit" class="btn" value="Add to Cart">
+                        </div>
+                        <!-- CHECK IF NEEDED -->
+                        <!-- hidden form element to redirect back to page came from (redirect_url) -->
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </div>
+                </form>
+                <div class="card-body">
+                    <a href="{% url 'detail' product.id %}" class="card-link">See Info</a>
+                </div>
+                <!-- add at to cart button -->
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
