--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                     {% endif %}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'menu_all' %}">Menu</a>
+                        <a class="nav-link" href="{% url 'products' %}">Menu</a>
                     </li>
                     {% if request.user.is_authenticated %}
                     {% if request.user.is_superuser %}
@@ -104,7 +104,7 @@
                     </li>
 
                 </ul>
-                <form class="d-flex" method="GET" action="{% url 'menu_all' %}">
+                <form class="d-flex" method="GET" action="{% url 'products' %}">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
