Correct update dollar currency sign to pound sterling in cart template

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -38,7 +38,7 @@
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                         </td>
                         <td class="py-3">
-                            <p class="my-0">${{ item.product.price }}</p>
+                            <p class="my-0">£{{ item.product.price }}</p>
                         </td>
                         <td class="py-3 w-25">
                             <form class="form update-form" method="POST" action="{% url 'adjust_cart' item.item_id %}">
