Add summernote to answer body

--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -20,7 +20,11 @@
             <p>{{ answer.body }}</p>
             {% endfor %}
             {% else %}
-            ADD ANSWER FORM
+            <form action="" method="post">
+                {% csrf_token %}
+                {{ answer_form | crispy }}
+                <input type="submit" value="Submit Answer">
+            </form>
             {% endif %}
         </div>
     </div>
