Add safe filter to summernote created var

--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -18,7 +18,7 @@
             <div class="accordion-body">
                 {% if question.question_answer.all %}
                 {% for answer in question.question_answer.all %}
-                <p>{{ answer.body }}</p>
+                <p>{{ answer.body | safe }}</p>
                 {% endfor %}
                 {% else %}
                 <form action="" method="post">
