Remove hardcoded url from answer form in view_faq template

--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -21,7 +21,8 @@
                 <p>{{ answer.body | safe }}</p>
                 {% endfor %}
                 {% else %}
-                <form action="answer/{{ question.id }}" method="post">
+                <!-- <form action="answer/{{ question.id }}" method="post"> -->
+                <form action="{% url 'answer' question.id %}" method="post">
                     {% csrf_token %}
                     {{ answer_form | crispy }}
                     <input type="submit" value="Submit Answer">
